kubernetes-resources/gke/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdx-nodeport
spec:
  selector:
    app: cdx
  ports:
    - port: 19443
      nodePort: 30443
  type: NodePort
